mon premier commit

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <nav>
+        <div id="principal">
+           <nav>
             <h1>SenVoyaye.</h1>
             <ul>
                 <li>Accueil</li>
@@ -18,9 +18,22 @@
             </ul>
         </nav>
         <section>
-            <h1>Bienvenue sur notre site web</h1>
-            <button>voir plus</button>
+            <div id="secondaire">
+                <img src="singe-de-compartiment-9740070.webp" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum soluta vel ipsa est numquam officiis.</p>
+                <button>voir plus</button>
+            </div>
+            <div id="secondaire">
+                <img src="singe-de-compartiment-9740070.webp" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum soluta vel ipsa est numquam officiis.</p>
+                <button>voir plus</button>
+            </div>
+            <div id="secondaire">
+                <img src="singe-de-compartiment-9740070.webp" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum soluta vel ipsa est numquam officiis.</p>
+                <button>voir plus</button>
+            </div>
         </section>
-    </div>
+        </div>
 </body>
 </html>
